Consolidated all Event tables: Each includes an action column to designate the type of event that occurred. That's the only additional information otherwise differentiating event tables.

--- a/IdeaBunker/Views/Shared/_LoginPartial.cshtml
+++ b/IdeaBunker/Views/Shared/_LoginPartial.cshtml
@@ -1,8 +1,8 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using IdeaBunker.Areas.Identity.Data
+@using IdeaBunker.Areas.Identity.Models.Entities
 
-@inject SignInManager<IdeaBunkerUser> SignInManager
-@inject UserManager<IdeaBunkerUser> UserManager
+@inject SignInManager<User> SignInManager
+@inject UserManager<User> UserManager
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
