--- a/IdeaBunker/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/IdeaBunker/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,4 +1,4 @@
-﻿@inject SignInManager<IdeaBunkerUser> SignInManager
+﻿@inject SignInManager<User> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
