--- a/IdeaBunker/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/IdeaBunker/Areas/Identity/Pages/_ViewImports.cshtml
@@ -2,4 +2,4 @@
 @using IdeaBunker.Areas.Identity
 @using IdeaBunker.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using IdeaBunker.Areas.Identity.Models.Entities
+@using IdeaBunker.Models
