--- a/IdeaBunker/Views/Shared/_LoginPartial.cshtml
+++ b/IdeaBunker/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using IdeaBunker.Areas.Identity.Models.Entities
+@using IdeaBunker.Models
 
 @inject SignInManager<User> SignInManager
 @inject UserManager<User> UserManager
