--- a/IdeaBunker/Areas/Public/Views/Project/Index.cshtml
+++ b/IdeaBunker/Areas/Public/Views/Project/Index.cshtml
@@ -8,14 +8,11 @@
 @if ((AuthorizationService.AuthorizeAsync(User, PermissionsMaster.Project.View)).Result.Succeeded)
 {
     <h1>Index</h1>
-
     <p>
         @if ((AuthorizationService.AuthorizeAsync(User, PermissionsMaster.Project.Create)).Result.Succeeded)
         {
-            <a asp-controller="ProjectCreate" asp-action="Create">Create New</a>
-
-            <text> | </text>
-            <a asp-action="Index">View Your Unpublished Projects</a>
+            <a asp-action="Create">Create New</a> <text> | </text>
+            <a asp-controller="ProjectDraft" asp-action="Index">View Your Unpublished Projects</a>
         }
     </p>
     <table class="table">
@@ -33,43 +30,27 @@
             @foreach (var item in Model)
             {
                 <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Name)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.UserNameAndRank)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.CategoryName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.ClearanceName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.StatusName)
-                    </td>
+                    <td>@Html.DisplayFor(modelItem => item.Name)</td>
+                    <td>@Html.DisplayFor(modelItem => item.UserNameAndRank)</td>
+                    <td>@Html.DisplayFor(modelItem => item.CategoryName)</td>
+                    <td>@Html.DisplayFor(modelItem => item.ClearanceName)</td>
+                    <td>@Html.DisplayFor(modelItem => item.StatusName)</td>
                     <td>
                         @if ((AuthorizationService.AuthorizeAsync(User, PermissionsMaster.Project.Vote)).Result.Succeeded)
                         {
-                            <a asp-controller="ProjectVote" asp-action="Vote" asp-route-id="@item.Id">Vote</a>
-
-                            <text> | </text>
+                            <a asp-action="Vote" asp-route-id="@item.Id">Vote</a><text> | </text>
                         }
                         @if ((AuthorizationService.AuthorizeAsync(User, PermissionsMaster.Project.Edit)).Result.Succeeded)
                         {
-                            <a asp-controller="ProjectEdit" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
-
-                            <text> | </text>
+                            <a asp-action="Edit" asp-route-id="@item.Id">Edit</a><text> | </text>
                         }
                         @if ((AuthorizationService.AuthorizeAsync(User, PermissionsMaster.Project.View)).Result.Succeeded)
                         {
-                            <a asp-action="Details" asp-route-id="@item.Id">Details</a>
-
-                            <text> | </text>
+                            <a asp-action="Details" asp-route-id="@item.Id">Details</a><text> | </text>
                         }
                         @if ((AuthorizationService.AuthorizeAsync(User, PermissionsMaster.Project.Delete)).Result.Succeeded)
                         {
-                            <a asp-controller="ProjectDelete" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                            <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                         }
                     </td>
                 </tr>
