--- a/IdeaBunker/Areas/Public/Views/ProjectDraft/Index.cshtml
+++ b/IdeaBunker/Areas/Public/Views/ProjectDraft/Index.cshtml
@@ -7,7 +7,7 @@
 
 @if ((AuthorizationService.AuthorizeAsync(User, PermissionsMaster.Project.Create)).Result.Succeeded)
 {
-    <h1>Your Unpublished Projects</h1>
+    <h1>My Unpublished Projects</h1>
 
     <p>
         <a asp-controller="Project" asp-action="Create">Create New</a><text> | </text>
@@ -17,7 +17,6 @@
         <thead>
             <tr>
                 <th>Name</th>
-                <th>User</th>
                 <th>Category</th>
                 <th>Clearance</th>
                 <th>Status</th>
@@ -29,13 +28,11 @@
             {
                 <tr>
                     <td>@Html.DisplayFor(modelItem => item.Name)</td>
-                    <td>@Html.DisplayFor(modelItem => item.UserNameAndRank)</td>
                     <td>@Html.DisplayFor(modelItem => item.CategoryName)</td>
                     <td>@Html.DisplayFor(modelItem => item.ClearanceName)</td>
                     <td>@Html.DisplayFor(modelItem => item.StatusName)</td>
                     <td>
                         <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> <text> | </text>
-                        <a asp-action="Details" asp-route-id="@item.Id">Details</a><text> | </text>
                         <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                     </td>
                 </tr>
