--- a/IdeaBunker/Areas/Public/Views/ProjectDraft/Delete.cshtml
+++ b/IdeaBunker/Areas/Public/Views/ProjectDraft/Delete.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@if ((AuthorizationService.AuthorizeAsync(User, PermissionsMaster.Project.Delete)).Result.Succeeded)
+@if ((AuthorizationService.AuthorizeAsync(User, PermissionsMaster.Project.Create)).Result.Succeeded)
 {
     <h1>Delete</h1>
 
@@ -57,7 +57,7 @@
                     <div class="form-group">
                         <input type="submit" value="Delete" class="btn btn-primary" />
                     </div>
-                    @if ((AuthorizationService.AuthorizeAsync(User, PermissionsMaster.Project.View)).Result.Succeeded)
+                    @if ((AuthorizationService.AuthorizeAsync(User, PermissionsMaster.Project.Create)).Result.Succeeded)
                     {
                         <a asp-action="Index">Back to List</a>
                     }
