Created Category and Category Draft Controllers. Instantiated preliminary Views, as well.

--- a/IdeaBunker/Areas/Public/Views/_ViewImports.cshtml
+++ b/IdeaBunker/Areas/Public/Views/_ViewImports.cshtml
@@ -1,6 +1,6 @@
 ﻿@using IdeaBunker
 @using IdeaBunker.Permissions
-@using IdeaBunker.Areas.Public.ViewModels.Projects
+@using IdeaBunker.Areas.Public.ViewModels
 @using Microsoft.AspNetCore.Authorization
 @inject IAuthorizationService AuthorizationService
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
