--- a/IdeaBunker/Areas/Public/Views/Category/Create.cshtml
+++ b/IdeaBunker/Areas/Public/Views/Category/Create.cshtml
@@ -1,27 +1,23 @@
-﻿@model ProjectViewModel
+﻿@model CategoryViewModel
 
 @{
     ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@if ((AuthorizationService.AuthorizeAsync(User, PermissionsMaster.Project.Create)).Result.Succeeded)
+@if ((AuthorizationService.AuthorizeAsync(User, PermissionsMaster.Category.Create)).Result.Succeeded)
 {
     <h1>Create</h1>
     <div class="row justify-content-center">
         <div class="col-5 mt-5">
-            <h4>Project</h4>
+            <h4>Category</h4>
             <hr />
-            <form asp-controller="Project" asp-action="Create">
+            <form asp-controller="Category" asp-action="Create">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
                     <label class="control-label">Name</label>
                     <input asp-for="Name" class="form-control" />
                     <span asp-validation-for="Name" class="text-danger"></span>
-                </div>                
-                <div class="form-group">
-                    <label class="control-label">Category</label>
-                    <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId"></select>
                 </div>
                 <div class="form-group">
                     <label class="control-label">Description</label>
@@ -30,10 +26,10 @@
                 </div>
                 <div class="form-group">
                     <label class="control-label">Provide Feedback</label>
-                    <input asp-for="EventDescription" class="form-control" placeholder="Why are you creating this project?" />
+                    <input asp-for="EventDescription" class="form-control" placeholder="Why are you creating this category?" />
                     <span asp-validation-for="EventDescription" class="text-danger"></span>
                 </div>
-                <br/>
+                <br />
                 <div class="form-group">
                     <input type="submit" value="Create" class="btn btn-primary" />
                 </div>
