Created Comment and Category Controllers. Updates to Db and Project Controllers.

--- a/IdeaBunker/Areas/Public/Views/Project/Details.cshtml
+++ b/IdeaBunker/Areas/Public/Views/Project/Details.cshtml
@@ -29,10 +29,6 @@
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.CategoryDescription)
             </dd>
-            <dt class="col-sm-2">Clearance</dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.ClearanceDescription)
-            </dd>
             <dt class="col-sm-2">Status</dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.StatusDescription)
@@ -51,6 +47,10 @@
         @if ((AuthorizationService.AuthorizeAsync(User, PermissionsMaster.Project.Edit)).Result.Succeeded)
         {
             <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a><text> | </text>
+        }
+        @if ((AuthorizationService.AuthorizeAsync(User, PermissionsMaster.Project.Edit)).Result.Succeeded)
+        {
+            <a asp-controller="Comment" asp-action="Create" asp-route-id="@Model?.Id">Comment</a>
         }
         <a asp-action="Index">Back to List</a>
     </div>
