Updated Project Controller and views to list comments per project: Created partial view to accomodate for this.

--- a/IdeaBunker/Areas/Public/Views/Project/Details.cshtml
+++ b/IdeaBunker/Areas/Public/Views/Project/Details.cshtml
@@ -54,4 +54,9 @@
         }
         <a asp-action="Index">Back to List</a>
     </div>
+    <br/>
+    <h4>Comments</h4>
+    <div>
+        @await Html.PartialAsync("_CommentPartial", Model);
+    </div>
 }
