Final namespace changes complete.

--- a/IdeaBunker/Views/_ViewImports.cshtml
+++ b/IdeaBunker/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using IdeaBunker
 @using IdeaBunker.Models
 @using IdeaBunker.ViewModels
+@using IdeaBunker.Areas.Identity.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
