--- a/IdeaBunker/Areas/Public/Views/Document/Upload.cshtml
+++ b/IdeaBunker/Areas/Public/Views/Document/Upload.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DocumentViewModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Upload";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -12,8 +12,9 @@
         <div class="col-5 mt-5">
             <h4>Document</h4>
             <hr />
-            <form asp-controller="Category" asp-action="Create">
+            <form asp-controller="Document" asp-action="Upload" enctype="multipart/form-data">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <input type="hidden" asp-for="ProjectId" />
                 <div class="form-group">
                     <label class="control-label">Name</label>
                     <input asp-for="Name" class="form-control" />
