--- a/IdeaBunker/Areas/Identity/Pages/Account/Login.cshtml
+++ b/IdeaBunker/Areas/Identity/Pages/Account/Login.cshtml
@@ -7,7 +7,7 @@
 }
 
 <form id="account" method="post">
-    <h2>Use a local account to log in.</h2>
+    <h2>Log In</h2>
     <hr />
     <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
     <div class="form-floating mb-3">
