--- a/IdeaBunker/Areas/Public/Views/CategoryDraft/Delete.cshtml
+++ b/IdeaBunker/Areas/Public/Views/CategoryDraft/Delete.cshtml
@@ -1,17 +1,17 @@
-﻿@model ProjectDetailsViewModel
+﻿@model CategoryDetailsViewModel
 
 @{
     ViewData["Title"] = "Delete";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@if ((AuthorizationService.AuthorizeAsync(User, PermissionsMaster.Project.Delete)).Result.Succeeded)
+@if ((AuthorizationService.AuthorizeAsync(User, PermissionsMaster.Category.Create)).Result.Succeeded)
 {
     <h1>Delete</h1>
 
     <h3>Are you sure you want to delete this?</h3>
     <div>
-        <h4>Project</h4>
+        <h4>Category</h4>
         <hr />
         <dl class="row">
             <dt class="col-sm-2">Name</dt>
@@ -26,29 +26,17 @@
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Description)
             </dd>
-            <dt class="col-sm-2">Category</dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.CategoryDescription)
-            </dd>
             <dt class="col-sm-2">Status</dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.StatusDescription)
             </dd>
-            <dt class="col-sm-2">Upvotes</dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.UpvoteCount)
-            </dd>
-            <dt class="col-sm-2">Downvotes</dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.DownvoteCount)
-            </dd>
             <div class="col-sm-10">
                 <form asp-action="Delete">
-                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>                 
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="form-group">
                         <input type="submit" value="Delete" class="btn btn-primary" />
                     </div>
-                    @if ((AuthorizationService.AuthorizeAsync(User, PermissionsMaster.Project.View)).Result.Succeeded)
+                    @if ((AuthorizationService.AuthorizeAsync(User, PermissionsMaster.Project.Create)).Result.Succeeded)
                     {
                         <a asp-action="Index">Back to List</a>
                     }
