--- a/IdeaBunker/Areas/Public/Views/Project/Create.cshtml
+++ b/IdeaBunker/Areas/Public/Views/Project/Create.cshtml
@@ -15,29 +15,26 @@
             <form asp-controller="Project" asp-action="Create">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
-                    <label class="control-label">Name</label>
-                    <input asp-for="Name" class="form-control" />
-                    <span asp-validation-for="Name" class="text-danger"></span>
-                </div>                
-                <div class="form-group">
-                    <label class="control-label">Category</label>
-                    <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId"></select>
+                    <div class="form-floating mb-3">
+                        <input asp-for="Name" class="form-control" aria-required="true" placeholder="name" />
+                        <label asp-for="Name" class="form-label">Name</label>
+                        <span asp-validation-for="Name" class="text-danger"></span>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <input asp-for="Description" class="form-control" aria-required="true" placeholder="description" />
+                        <label asp-for="Description" class="form-label">Description</label>
+                        <span asp-validation-for="Description" class="text-danger"></span>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId" aria-required="true" placeholder="category">
+                            <option value="" disabled selected>Select</option>
+                        </select>
+                        <label asp-for="CategoryId" class="form-label">Category</label>
+                    </div>                                     
+                    <div class="form-group">
+                        <input type="submit" value="Create" class="btn btn-primary" />                
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label class="control-label">Description</label>
-                    <input asp-for="Description" class="form-control" />
-                    <span asp-validation-for="Description" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label class="control-label">Provide Feedback</label>
-                    <input asp-for="EventDescription" class="form-control" placeholder="Why are you creating this project?" />
-                    <span asp-validation-for="EventDescription" class="text-danger"></span>
-                </div>
-                <br/>
-                <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-primary" />
-                </div>
-                <br />
             </form>
             <div>
                 @if ((AuthorizationService.AuthorizeAsync(User, PermissionsMaster.Project.View)).Result.Succeeded)
@@ -46,6 +43,12 @@
                 }
             </div>
         </div>
+        @if (Model.Event is not null && Model.Event.ShowModal)
+        {
+            <div>
+                @await Html.PartialAsync("_EventModalViewPartial", Model.Event)
+            </div>
+        }
     </div>
 
     @section Scripts {
