--- a/IdeaBunker/Areas/Public/Views/_ViewImports.cshtml
+++ b/IdeaBunker/Areas/Public/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using IdeaBunker
 @using IdeaBunker.Permissions
+@using IdeaBunker.ViewModels
 @using IdeaBunker.Areas.Public.ViewModels
 @using Microsoft.AspNetCore.Authorization
 @inject IAuthorizationService AuthorizationService
