--- a/IdeaBunker/Views/_ViewImports.cshtml
+++ b/IdeaBunker/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using IdeaBunker
 @using IdeaBunker.Models
 @using IdeaBunker.ViewModels
+@using IdeaBunker.Areas.Public.ViewModels
 @using IdeaBunker.Areas.Identity.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
